# crypto-intel-mcp

./: .env.example  BITACORA.md  README.md  pyproject.toml
crypto_intel_mcp/: __init__.py  __main__.py  analyze.py  coingecko.py  server.py
crypto_intel_mcp/sources/: momentum.py  quote.py  trending.py
evals/: crypto_intel_eval.xml
tests/: test_smoke.py
