[project]
name = "crypto-intel-mcp"
version = "0.1.0"
description = "Crypto market intelligence (price, momentum, trending) over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.scripts]
crypto-intel-mcp = "crypto_intel_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crypto_intel_mcp*"]
